# MikRapor

./: .gitignore  CLAUDE.md  LICENSE  MIKRO-API-ENTEGRASYONU.md  MIKRO-SEMA-NOTLARI.md  MikRapor.spec  README.md  advisor.py  analyzer.py  bank_parser.py  bilanco_cli.py  bilanco_pdf.py  bilanco_view.py  build_exe.ps1  cari_diag_cli.py  cari_plan_analyzer.py  cari_plan_parser.py  cashflow_analyzer.py  cfo_analyzer.py  charts.py  config.py  diag_mikro.py  diag_mikro2.py  diag_mizan.py  empty_state.py  exporter.py  fatura_analyzer.py  fatura_parser.py  gelir_tablosu.py  gelir_tablosu_pdf.py  gelir_tablosu_view.py  gercek_durum.py  gercek_durum_ayarlar.py  gercek_durum_settings_dialog.py  gercek_durum_view.py  main.py  metric_labels.py  mikro_api.py  mikro_fetch.py  mikro_settings_dialog.py  (+41 more)
.claude/agents/: plan-elestirmen.md
.github/workflows/: ci.yml
assets/: generate_icons.py
domain/: __init__.py  bulgular.py  cari_vade.py  gelir_tablosu.py  gercek_durum.py  gercek_durum_ayarlar.py  kredi.py  mizan_bilanco.py  nakit_akis.py  ortak.py  runway.py  tahmin.py  tahsilat_alacak.py  terimler.py  trend.py
infra/: __init__.py  cancel.py  config.py  gizli.py  mikro_api.py  mikro_fetch.py  sql_params.py
samples/: ornek_banka_2026_03.csv  ornek_muavin_2026_03.csv
ui/: __init__.py  app.py  bilanco_pdf.py  bilanco_view.py  bilesenler.py  chrome_toolbar.py  donem.py  empty_state.py  gelir_tablosu_pdf.py  gelir_tablosu_view.py  gercek_durum_pdf.py  gercek_durum_settings_dialog.py  gercek_durum_view.py  icons.py  mikro_settings_dialog.py  nakit_akis_pdf.py  nakit_akis_view.py  nav_tip.py  pdf_ortak.py  rapor_tab.py  resources.py  styles.py  tahmin_pdf.py  tahmin_view.py  tahsilat_alacak_pdf.py  tahsilat_alacak_view.py  tarih_secici.py  trend_pdf.py  trend_view.py  worker.py  yukleniyor.py
ui/tabs/: __init__.py  bilanco_tab.py  gelir_tablosu_tab.py  gercek_durum_tab.py  nakit_akis_tab.py  tahmin_tab.py  tahsilat_alacak_tab.py  trend_tab.py
